force-app/main/default/objects/Booking_Details__c/Booking_Details__c.object-meta.xml
<CustomObject>
    <label>Booking Details</label>
    <nameField>
        <displayFormat>BD-{000}</displayFormat>
        <label>Booking Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>