force-app/main/default/objects/Booking_Details__c/fields/Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>Amount_Type__c</fullName>
    <label>Amount Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Rate</fullName>
            </value>
            <value>
                <fullName>Lumpsum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>