force-app/main/default/objects/Booking_Details__c/fields/Broker_Discount__c.field-meta.xml
<CustomField>
    <fullName>Broker_Discount__c</fullName>
    <label>Channel Partner Discount</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>