force-app/main/default/objects/Booking_Details__c/fields/Broker_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Broker_Discount_Percentage__c</fullName>
    <label>Channel Partner Discount Percentage</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>