force-app/main/default/objects/Booking_Details__c/fields/Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge</label>
    <referenceTo>Global_Charges__c</referenceTo>
    <relationshipLabel>Booking Details</relationshipLabel>
    <relationshipName>Booking_Details</relationshipName>
    <type>Lookup</type>
</CustomField>