force-app/main/default/objects/Booking_Details__c/fields/Dp_Discount__c.field-meta.xml
<CustomField>
    <fullName>Dp_Discount__c</fullName>
    <label>Dp Discount</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>