force-app/main/default/objects/Booking_Details__c/fields/Flat_Podium_No__c.field-meta.xml
<CustomField>
    <fullName>Flat_Podium_No__c</fullName>
    <label>Flat/Podium No</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>