force-app/main/default/objects/Booking_Details__c/fields/Global_Charges__c.field-meta.xml
<CustomField>
    <fullName>Global_Charges__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Charges</label>
    <referenceTo>Global_Charges__c</referenceTo>
    <relationshipLabel>Booking Details (Global Charges)</relationshipLabel>
    <relationshipName>Booking_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>