force-app/main/default/objects/Booking_Details__c/fields/Global_Unit_of_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Global_Unit_of_Measurement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Unit of Measurement</label>
    <referenceTo>Global_Unit_Of_Measurement__c</referenceTo>
    <relationshipLabel>Booking Details</relationshipLabel>
    <relationshipName>Booking_Details</relationshipName>
    <type>Lookup</type>
</CustomField>