force-app/main/default/objects/Booking_Details__c/fields/InAugural_Discount__c.field-meta.xml
<CustomField>
    <fullName>InAugural_Discount__c</fullName>
    <label>InAugural Discount</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>