force-app/main/default/objects/Booking_Details__c/fields/InAugural_Rate__c.field-meta.xml
<CustomField>
    <fullName>InAugural_Rate__c</fullName>
    <label>InAugural Rate</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>