force-app/main/default/objects/Booking_Details__c/fields/Load__c.field-meta.xml
<CustomField>
    <fullName>Load__c</fullName>
    <label>Load</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>