force-app/main/default/objects/Booking_Details__c/fields/Net_Cost__c.field-meta.xml
<CustomField>
    <fullName>Net_Cost__c</fullName>
    <formula>Amount__c - Net_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>