force-app/main/default/objects/Booking_Details__c/fields/Net_Discount__c.field-meta.xml
<CustomField>
    <fullName>Net_Discount__c</fullName>
    <formula>InAugural_Discount__c + Broker_Discount__c + Special_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>