force-app/main/default/objects/Booking_Details__c/fields/nRate__c.field-meta.xml
<CustomField>
    <fullName>nRate__c</fullName>
    <label>Rate</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>