force-app/main/default/objects/Booking_Details__c/fields/PlanCode__c.field-meta.xml
<CustomField>
    <fullName>PlanCode__c</fullName>
    <label>PlanCode</label>
    <length>23</length>
    <type>Text</type>
</CustomField>