force-app/main/default/objects/Booking_Details__c/fields/Project_Unit__c.field-meta.xml
<CustomField>
    <fullName>Project_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Unit</label>
    <referenceTo>Project_Unit__c</referenceTo>
    <relationshipLabel>Booking Details</relationshipLabel>
    <relationshipName>Booking_Details</relationshipName>
    <type>Lookup</type>
</CustomField>