force-app/main/default/objects/Booking_Details__c/fields/Special_Discount__c.field-meta.xml
<CustomField>
    <fullName>Special_Discount__c</fullName>
    <label>Special Discount</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>