force-app/main/default/objects/Booking_Details__c/fields/Special_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Special_Percentage__c</fullName>
    <label>Special Percentage</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>