force-app/main/default/objects/Booking_Details__c/fields/Special_Rate__c.field-meta.xml
<CustomField>
    <fullName>Special_Rate__c</fullName>
    <label>Special Rate</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>