force-app/main/default/objects/Booking_Details__c/fields/Standard_Pay_Plan_Header__c.field-meta.xml
<CustomField>
    <fullName>Standard_Pay_Plan_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Pay Plan Header</label>
    <referenceTo>Standard_Pay_Plan_Header__c</referenceTo>
    <relationshipLabel>Booking Details</relationshipLabel>
    <relationshipName>Booking_Details</relationshipName>
    <type>Lookup</type>
</CustomField>