force-app/main/default/objects/Booking_Details__c/fields/Type_Of_Car__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Car__c</fullName>
    <label>Type Of Car</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small Car</fullName>
            </value>
            <value>
                <fullName>Big Car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>